--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,8 +8,6 @@ serde.workspace = true
 serde_json.workspace = true
 leptos.workspace = true
 log.workspace = true
-leptos_actix = { workspace = true, optional = true }
-actix-web = { workspace = true, optional = true }
 anyhow = { version = "1.0.97", optional = true }
 dash-mpd = { version = "0.18.0", optional = true }
 roux = { version = "2.2.14", optional = true }
@@ -18,12 +16,4 @@ shared = { path = "../shared" }
 
 [features]
 hydrate = ["leptos/hydrate"]
-ssr = [
-    "leptos/ssr",
-    "dep:anyhow",
-    "dep:roux",
-    "dep:reqwest",
-    "dep:dash-mpd",
-    "dep:leptos_actix",
-    "dep:actix-web",
-]
+ssr = ["leptos/ssr", "dep:anyhow", "dep:roux", "dep:reqwest", "dep:dash-mpd"]
