--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -12,8 +12,16 @@ anyhow = { version = "1.0.97", optional = true }
 dash-mpd = { version = "0.18.0", optional = true }
 roux = { version = "2.2.14", optional = true }
 reqwest = { version = "0.12.12", optional = true }
+octocrab = { version = "0.43.0", optional = true }
 shared = { path = "../shared" }
 
 [features]
 hydrate = ["leptos/hydrate"]
-ssr = ["leptos/ssr", "dep:anyhow", "dep:roux", "dep:reqwest", "dep:dash-mpd"]
+ssr = [
+    "leptos/ssr",
+    "dep:anyhow",
+    "dep:roux",
+    "dep:reqwest",
+    "dep:dash-mpd",
+    "dep:octocrab",
+]
