--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -17,8 +17,9 @@ web-sys = { version = "0.3.77", default-features = false, features = [
     "Url",
     "BlobPropertyBag",
 ] }
-icondata = "0.5.0"
 actix-web = { workspace = true, optional = true }
+icondata = "0.5.0"
+thousands = "0.2.0"
 api = { path = "../api" }
 shared = { path = "../shared" }
 
