--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -13,6 +13,9 @@ dash-mpd = { version = "0.18.0", optional = true }
 roux = { version = "2.2.14", optional = true }
 reqwest = { version = "0.12.12", optional = true }
 octocrab = { version = "0.43.0", optional = true }
+frankenstein = { version = "0.41.0", features = [
+    "client-reqwest",
+], optional = true }
 shared = { path = "../shared" }
 
 [features]
@@ -24,4 +27,5 @@ ssr = [
     "dep:reqwest",
     "dep:dash-mpd",
     "dep:octocrab",
+    "dep:frankenstein",
 ]
